# fluvio-web

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  merge_group.yaml
crates/fluvio-web/: Cargo.toml  Makefile
crates/fluvio-web/src/: fluvio.rs  leptos_fluvio.rs  lib.rs  net.rs  routing.rs
crates/fluvio-ws/: Cargo.toml
crates/fluvio-ws-proxy/: Cargo.toml  Makefile  README.md
crates/fluvio-ws-proxy/src/: fluvio_domain_connector.rs  main.rs  stream.rs  ws.rs
crates/fluvio-ws/src/: fluvio.rs  lib.rs  net.rs
widgets/counter/: Cargo.toml  Makefile
widgets/counter/assets/: start.js
widgets/counter/dev/: Trunk.toml  index.html
widgets/counter/release/: Trunk.toml  index.html
widgets/counter/src/: main.rs
widgets/counter/src/components/: app.rs  count.rs  counter.rs  increment_button.rs  mod.rs
