[workspace]
members = [
    "crates/fluvio-web",
    "crates/fluvio-ws",
    "crates/fluvio-ws-proxy",
    "widgets/counter",
]

resolver = "2"

[workspace.dependencies]
actix = { version = "0.13.3", default-features = false }
actix-web = { version = "4", default-features = false }
actix-web-actors = { version = "4.3.0", default-features = false }
async-channel = { version = "2.3.1", default-features = false }
async-lock = "3.4.0"
async-stream = "0.3.6"
async-trait = { version = "0.1.80", default-features = false }
async-tungstenite = { version = "0.29.1", default-features = false }
custom-element = { git = "https://github.com/EstebanBorai/custom-element.git", rev = "1937b98" }
anyhow = "1.0.94"
clap = { version = "4.5.23", default-features = false }
ctrlc = "3.4.5"
console_error_panic_hook = "0.1"
derive_builder = "0.20.0"
futures-util = { version = "0.3.30", default-features = false }
http = "1.0.0"
js-sys = "0.3.70"
leptos = { version = "0.6.14", features = ["csr"] }
leptos_meta = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
serde = { version = "1.0.144", default-features = false }
serde_json = "1.0.60"
serde-wasm-bindgen = "0.6.5"
serde_qs = "0.13.0"
tokio = { version = "1.41.1", default-features = false }
tracing = "0.1.19"
url = "2.5.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "=0.4.42"
wasm-bindgen-test = "0.3"
web-sys = "0.3.70"
ws_stream_wasm = "0.7.4"

# fluvio
fluvio-future = { version = "0.7.2", default-features = false }
fluvio = { version = "0.26.1", default-features = false }

fluvio-web = { path = "crates/fluvio-web" }

[profile.wasm-release]
inherits = "release"
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-debug]
inherits = "dev"
overflow-checks = false
strip = true
opt-level = 's'
panic = "abort"
